--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1765,7 +1765,7 @@
 									</div>
 								</div>
 							</div>
-							<a href="#" class="btn btn-extra-light-green btn-md btn-block mt-4">Показать еще...</a>
+							<a href="#" class="btn btn-outline-gray--green btn-md btn-block mt-4">Показать еще...</a>
 						</div>
 
 						<div class="tab-pane fade" id="nav-mma-7" role="tabpanel" aria-labelledby="list-mma-list">
@@ -1882,7 +1882,7 @@
 									</div>
 								</div>
 							</div>
-							<a href="#" class="btn btn-extra-light-green btn-md btn-block mt-4">Показать еще...</a>
+							<a href="#" class="btn btn-outline-gray--green btn-md btn-block mt-4">Показать еще...</a>
 						</div>
 						<div class="tab-pane fade" id="nav-box-7" role="tabpanel" aria-labelledby="list-box-list">
 							<div class="post-preview post-preview_board mx-n3 mx-sm-auto">
@@ -1998,7 +1998,7 @@
 									</div>
 								</div>
 							</div>
-							<a href="#" class="btn btn-extra-light-green btn-md btn-block mt-4">Показать еще...</a>
+							<a href="#" class="btn btn-outline-gray--green btn-md btn-block mt-4">Показать еще...</a>
 						</div>
 
 					</div>
