add pb-1 in column content

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -200,7 +200,7 @@
 	</section>
 	<div class="container-fluid container-md">
 		<div class="row mt-2 mt-md-5">
-			<div class="col-lg-8 d-flex flex-column">
+			<div class="col-lg-8 d-flex flex-column pb-1">
 				<section class="" id="section-list">
 					<div class="badge-status active mb-1">live</div>
 					<div class="h1 font-weight-bold">Ближайшие трансляции</div>
@@ -1649,7 +1649,7 @@
 						<a class="tabs-menu__btn green" data-toggle="tab" href="#nav-box-7" role="tab"
 							 aria-controls="nav-profile" aria-selected="false">БОКС</a>
 					</nav>
-					<div class="tab-content mt-4" id="myTabContentNews-7">
+					<div class="tab-content mt-4 " id="myTabContentNews-7">
 						<div class="tab-pane fade show active" id="nav-last-7" role="tabpanel" aria-labelledby="list-all-list">
 							<div class="post-preview post-preview_board mx-n3 mx-sm-auto">
 								<img src="../../public/images/fighter.jpg" class="post-preview__image" alt="image fighter">
