--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3409,8 +3409,8 @@
 	</div>
 </main>
 
-<footer class="footer navbar-fixed-bottom mt-5" style="overflow-x: hidden">
-	<nav class="footer-nav navbar-black bg-black pt-4 pb-2 pb-sm-0">
+<footer class="footer navbar-fixed-bottom mt-3 mt-sm-5" style="overflow-x: hidden">
+	<nav class="footer-nav navbar-black bg-black pt-4 pb-3 pb-sm-0">
 		<div class="container-fluid container-md">
 			<div class="row">
 				<div
