--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,7 +17,7 @@
 				<a class="navbar-brand" href="#">
 					<img src="../../public/images/logo.jpg" class="d-inline-block align-top" alt="" loading="lazy">
 				</a>
-				<ul class="social-links social-links_white social-links_border-blue-dark" id="social-link"
+				<ul class="social-links white border-blue-dark" id="social-link"
 						data-lg-after="navbar-menu">
 					<li class="social-links__item active">
 						<a class="social-links__link" href="#">
@@ -334,7 +334,7 @@
 					<nav class="nav nav-tabs tabs-menu mt-4" id="nav-tab" role="tablist">
 						<a class="tabs-menu__btn md-green active radius-lg" id="nav-home-tab" data-toggle="tab" href="#nav-last" role="tab"
 							 aria-controls="nav-home" aria-selected="true">Последние</a>
-						<a class="tabs-menu__btn md-red radius-lg" id="nav-profile-tab" data-toggle="tab" href="#nav-top" role="tab"
+						<a class="tabs-menu__btn md-red radius-lg " id="nav-profile-tab" data-toggle="tab" href="#nav-top" role="tab"
 							 aria-controls="nav-profile" aria-selected="false">ТОП</a>
 					</nav>
 
@@ -3844,7 +3844,7 @@
 							<div class="comments-el__text-title mt-2">Дэнни Гарсиа деклассировал кусающегося Ивана Редкача</div>
 						</div>
 					</div>
-					<a href="#" class="btn btn-outline-gray--green btn-block mt-4">Показать еще...</a>
+					<a href="#" class="btn btn-outline-gray--green btn-block btn-md-mobile mt-4">Показать еще...</a>
 				</div>
 				<div class="widget mt-5" id="section-battle-results">
 					<div class="widget__title">
@@ -3964,7 +3964,7 @@
 									</div>
 								</div>
 							</div>
-							<a href="#" class="btn btn-outline-gray--green btn-block mt-4">Показать еще...</a>
+							<a href="#" class="btn btn-outline-gray--green btn-block btn-md-mobile mt-4">Показать еще...</a>
 						</div>
 						<div class="tab-pane fade" id="nav-mma-6" role="tabpanel" aria-labelledby="mma-tab">
 							<div class="post-list mt-small-1">
@@ -4029,7 +4029,7 @@
 									</div>
 								</div>
 							</div>
-							<a href="#" class="btn btn-outline-gray--green btn-block mt-4">Показать еще...</a>
+							<a href="#" class="btn btn-outline-gray--green btn-block btn-md-mobile mt-4">Показать еще...</a>
 						</div>
 						<div class="tab-pane fade" id="nav-box-6" role="tabpanel" aria-labelledby="box-tab">
 							<div class="post-list mt-small-1">
@@ -4065,7 +4065,7 @@
 									</div>
 								</div>
 							</div>
-							<a href="#" class="btn btn-outline-gray--green btn-block mt-4">Показать еще...</a>
+							<a href="#" class="btn btn-outline-gray--green btn-block btn-md-mobile mt-4">Показать еще...</a>
 						</div>
 					</div>
 
@@ -4088,7 +4088,7 @@
 						<div class="footer-nav__cop">&copy; FightNews 2020</div>
 						<a href="#" class="footer-nav__conf-link">Политика конфеденциальности</a>
 					</div>
-					<ul class="social-links social-links_gray  social-links-sm_border-blue-dark mt-3 mt-sm-0">
+					<ul class="social-links gray  sm-blue-dark mt-3 mt-sm-0">
 						<li class="social-links__item active">
 							<a class="social-links__link" href="#">
 								<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
