--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -75,24 +75,27 @@
 				<div class="navbar-main__collapse" id="burger-content">
 					<ul class="navbar-main__nav-list navbar-menu" id="navbar-menu">
 						<li class="nav-item dropdown">
-							<a class="nav-btn dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-								 aria-expanded="false">Бокс</a>
+							<a class="nav-btn" href="#">Бокс</a>
+							<button type="button" class="btn-split dropdown-toggle" role="button"
+											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="#">Трансляции Бокс</a>
 								<a class="dropdown-item" href="#">Публикации</a>
 							</div>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-btn dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-								 aria-expanded="false">MMA</a>
+							<a class="nav-btn" href="#">MMA</a>
+							<button type="button" class="btn-split dropdown-toggle" role="button"
+											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="#">Трансляции MMA</a>
 								<a class="dropdown-item" href="#">Публикации</a>
 							</div>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-btn dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-								 aria-expanded="false">Рейтинги</a>
+							<a class="nav-btn" href="#">Рейтинги</a>
+							<button type="button" class="btn-split dropdown-toggle" role="button"
+											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" href="#">Рейтинги MMA</a>
 								<a class="dropdown-item" href="#">Рейтинги Бокс</a>
@@ -103,12 +106,16 @@
 							<a class="nav-btn" href="#">Бойцы</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-btn dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-								 aria-expanded="false">Видео</a>
+							<a class="nav-btn" href="#">Видео</a>
+							<button type="button" class="btn-split dropdown-toggle" role="button"
+											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 							<ul class="dropdown-menu">
-								<li>
-									<a class="dropdown-item" href="#">Видео MMA</a>
-									<div class="submenu dropdown-menu">
+								<li class="dropdown-submenu">
+										<a class="dropdown-item" href="#">Видео MMA</a>
+										<button type="button" class="btn-split btn-split_inner dropdown-toggle"
+														data-toggle="dropdown-submenu" aria-haspopup="true" aria-expanded="false">
+										</button>
+									<div class="submenu dropdown-menu" aria-labelledby="dropdownMenu2">
 										<a class="dropdown-item" href="#">Видео UFC</a>
 										<a class="dropdown-item" href="#">Видео Bellator</a>
 										<a class="dropdown-item" href="#">Видео PFL</a>
@@ -118,8 +125,17 @@
 								<li>
 									<a class="dropdown-item" href="#">Видео Бокс</a>
 								</li>
-								<li>
+								<li class="dropdown-submenu">
 									<a class="dropdown-item" href="#">Бои на голых кулаках</a>
+									<button type="button" class="btn-split btn-split_inner dropdown-toggle"
+													data-toggle="dropdown-submenu" aria-haspopup="true" aria-expanded="false">
+									</button>
+									<div class="submenu dropdown-menu" aria-labelledby="dropdownMenu2">
+										<a class="dropdown-item" href="#">Бои на голых кулаках UFC</a>
+										<a class="dropdown-item" href="#">Бои на голых кулаках Bellator</a>
+										<a class="dropdown-item" href="#">Бои на голых кулаках PFL</a>
+										<a class="dropdown-item" href="#">Другое</a>
+									</div>
 								</li>
 							</ul>
 						</li>
@@ -133,8 +149,9 @@
 							<a class="nav-btn" href="#">Статьи</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-btn dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-								 aria-expanded="false">Прочее</a>
+							<a class="nav-btn" href="#">Прочее</a>
+							<button type="button" class="btn-split dropdown-toggle" role="button"
+											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 							<div class="dropdown-menu dropdown-menu-right">
 								<a class="dropdown-item" href="#">Аналитика</a>
 								<a class="dropdown-item" href="#">Биография</a>
@@ -143,8 +160,9 @@
 							</div>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-btn dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-								 aria-expanded="false">FAQ</a>
+							<a class="nav-btn" href="#">FAQ</a>
+							<button type="button" class="btn-split dropdown-toggle" role="button"
+											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 							<div class="dropdown-menu dropdown-menu-right">
 								<a class="dropdown-item" href="#">Бан лист</a>
 								<a class="dropdown-item" href="#">Список модераторов</a>
@@ -332,9 +350,11 @@
 					</div>
 
 					<nav class="nav nav-tabs tabs-menu mt-4" id="nav-tab" role="tablist">
-						<a class="tabs-menu__btn md-green active radius-lg" id="nav-home-tab" data-toggle="tab" href="#nav-last" role="tab"
+						<a class="tabs-menu__btn md-green active radius-lg" id="nav-home-tab" data-toggle="tab" href="#nav-last"
+							 role="tab"
 							 aria-controls="nav-home" aria-selected="true">Последние</a>
-						<a class="tabs-menu__btn md-red radius-lg " id="nav-profile-tab" data-toggle="tab" href="#nav-top" role="tab"
+						<a class="tabs-menu__btn md-red radius-lg " id="nav-profile-tab" data-toggle="tab" href="#nav-top"
+							 role="tab"
 							 aria-controls="nav-profile" aria-selected="false">ТОП</a>
 					</nav>
 
