--- a/src/pages/fighter.html
+++ b/src/pages/fighter.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="Description" content="Put your description here.">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Main</title>
+	<title>Боец</title>
 	<link rel="stylesheet" href="../styles/main.scss">
 </head>
 <body>
@@ -16,8 +16,8 @@
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item"><a href="#">Главная</a></li>
-						<li class="breadcrumb-item"><a href="#">Новости</a></li>
-						<li class="breadcrumb-item active" aria-current="page">Новость</li>
+						<li class="breadcrumb-item"><a href="#">Бойцы</a></li>
+						<li class="breadcrumb-item active" aria-current="page">Александр Отсука</li>
 					</ol>
 				</nav>
 				<section class="section-fighter">
@@ -380,5 +380,7 @@
 		</div>
 	</div>
 </main>
+
+<script src="../scripts/main.js"></script>
 </body>
 </html>
