--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -92,7 +92,7 @@
 								<a class="dropdown-item" href="#">Публикации</a>
 							</div>
 						</li>
-						<li class="nav-item dropdown">
+						<li class="nav-item dropdown after-btn">
 							<a class="nav-btn" href="#">Рейтинги</a>
 							<button type="button" class="btn-split dropdown-toggle" role="button"
 											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
@@ -105,12 +105,12 @@
 						<li class="nav-item">
 							<a class="nav-btn" href="#">Бойцы</a>
 						</li>
-						<li class="nav-item dropdown">
+						<li class="nav-item dropdown after-btn">
 							<a class="nav-btn" href="#">Видео</a>
 							<button type="button" class="btn-split dropdown-toggle" role="button"
 											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
 							<ul class="dropdown-menu">
-								<li class="dropdown-submenu">
+								<li class="dropdown-submenu after-btn">
 										<a class="dropdown-item" href="#">Видео MMA</a>
 										<button type="button" class="btn-split btn-split_inner dropdown-toggle"
 														data-toggle="dropdown-submenu" aria-haspopup="true" aria-expanded="false">
@@ -125,7 +125,7 @@
 								<li>
 									<a class="dropdown-item" href="#">Видео Бокс</a>
 								</li>
-								<li class="dropdown-submenu">
+								<li class="dropdown-submenu after-btn">
 									<a class="dropdown-item" href="#">Бои на голых кулаках</a>
 									<button type="button" class="btn-split btn-split_inner dropdown-toggle"
 													data-toggle="dropdown-submenu" aria-haspopup="true" aria-expanded="false">
