--- a/src/pages/news.html
+++ b/src/pages/news.html
@@ -258,7 +258,7 @@
 				<div class="ads ads_md mt-space-md d-none d-sm-flex">Рекламный банер</div>
 
 				<div class="similar-news mt-space-md">
-					<div class="similar-news__title post-title">Похожие темы:</div>
+					<div class="similar-news__title post-title">Похожие темы</div>
 					<div class="similar-news__wrapper mt-3">
 						<div class="post-preview post-preview_column">
 							<img src="../../public/images/fighter-3.jpg" alt="" class="post-preview__image">
@@ -390,7 +390,7 @@
 						<div class="label label_red ml-1">76</div>
 					</div>
 					<nav aria-label="Page navigation example">
-						<ul class="pagination mt-4 d-none d-sm-grid">
+						<ul class="pagination mt-4">
 							<li class="page-item disabled">
 								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 									<div aria-hidden="true">
@@ -444,7 +444,7 @@
 										<div class="comments-card__avatar">
 											<img src="../../public/images/konor.jpg" class="comments-card__image" alt="avatar">
 										</div>
-										<div class="comments-card__name">Джонни</div>
+										<a class="comments-card__name" href="#">Джонни</a>
 										<div class="comments-card__date">
 											<div class="post-info post-info_sm post-info_gray-600">
 												<div class="post-info__date">
@@ -567,7 +567,8 @@
 												<div class="comments-card__avatar">
 													<img src="../../public/images/konor.jpg" class="comments-card__image" alt="avatar">
 												</div>
-												<div class="comments-card__name">Джонни</div>
+												
+												<a class="comments-card__name" href="#">Джонни</a>
 												<div class="comments-card__date">
 													<div class="post-info post-info_sm post-info_gray-600">
 														<div class="post-info__date">
@@ -680,7 +681,7 @@
 										<div class="comments-card__avatar">
 											<img src="../../public/images/konor.jpg" class="comments-card__image" alt="avatar">
 										</div>
-										<div class="comments-card__name">Джонни</div>
+										<a class="comments-card__name" href="#">Джонни</a>
 										<div class="comments-card__date">
 											<div class="post-info post-info_sm post-info_gray-600">
 												<div class="post-info__date">
@@ -795,7 +796,7 @@
 										<div class="comments-card__avatar">
 											<img src="../../public/images/konor.jpg" class="comments-card__image" alt="avatar">
 										</div>
-										<div class="comments-card__name">Джонни</div>
+										<a class="comments-card__name" href="#">Джонни</a>
 										<div class="comments-card__date">
 											<div class="post-info post-info_sm post-info_gray-600">
 												<div class="post-info__date">
