--- a/src/pages/fighter.html
+++ b/src/pages/fighter.html
@@ -326,8 +326,8 @@
 
 						</div>
 						<nav aria-label="Page navigation example">
-							<ul class="pagination mt-4">
-								<li class="page-item disabled">
+							<div class="pagination-wrap mt-4">
+								<div class="page-item disabled">
 									<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 										<div aria-hidden="true">
 											<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
@@ -335,8 +335,8 @@
 											</svg>
 										</div>
 									</a>
-								</li>
-								<li class="page-item disabled">
+								</div>
+								<div class="page-item disabled">
 									<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
 										<div aria-hidden="true">
 											<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
@@ -344,14 +344,16 @@
 											</svg>
 										</div>
 									</a>
-								</li>
-								<li class="page-item active"><a class="page-link" href="#">1</a></li>
-								<li class="page-item"><a class="page-link" href="#">2</a></li>
-								<li class="page-item"><a class="page-link" href="#">3</a></li>
-								<li class="page-item"><a class="page-link" href="#">4</a></li>
-								<li class="page-item"><a class="page-link" href="#">5</a></li>
-								<li class="page-item"><a class="page-link" href="#">6</a></li>
-								<li class="page-item">
+								</div>
+								<ul class="pagination">
+									<li class="page-item active"><a class="page-link" href="#">1</a></li>
+									<li class="page-item"><a class="page-link" href="#">2</a></li>
+									<li class="page-item"><a class="page-link" href="#">3</a></li>
+									<li class="page-item"><a class="page-link" href="#">4</a></li>
+									<li class="page-item"><a class="page-link" href="#">5</a></li>
+									<li class="page-item"><a class="page-link" href="#">6</a></li>
+								</ul>
+								<div class="page-item">
 									<a class="page-link page-link_arrow" href="#" aria-label="Next">
 										<div aria-hidden="true">
 											<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
@@ -359,8 +361,8 @@
 											</svg>
 										</div>
 									</a>
-								</li>
-								<li class="page-item">
+								</div>
+								<div class="page-item">
 									<a class="page-link page-link_arrow" href="#" aria-label="Next">
 										<div aria-hidden="true">
 											<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
@@ -368,8 +370,8 @@
 											</svg>
 										</div>
 									</a>
-								</li>
-							</ul>
+								</div>
+							</div>
 						</nav>
 					</div>
 
