--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -148,7 +148,7 @@
 						<li class="nav-item">
 							<a class="nav-btn" href="#">Статьи</a>
 						</li>
-						<li class="nav-item dropdown">
+						<li class="nav-item dropdown after-btn">
 							<a class="nav-btn" href="#">Прочее</a>
 							<button type="button" class="btn-split dropdown-toggle" role="button"
 											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
@@ -159,7 +159,7 @@
 								<a class="dropdown-item" href="#">Фото</a>
 							</div>
 						</li>
-						<li class="nav-item dropdown">
+						<li class="nav-item dropdown after-btn">
 							<a class="nav-btn" href="#">FAQ</a>
 							<button type="button" class="btn-split dropdown-toggle" role="button"
 											data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
