--- a/src/pages/fighter.html
+++ b/src/pages/fighter.html
@@ -35,7 +35,8 @@
 										<svg width="24" height="24" class="label__icon" viewBox="0 0 24 24">
 											<use xlink:href="../../public/icons/flag.svg#flag-japan"/>
 										</svg>
-										<span>Япония</span></div>
+										<span>Япония</span>
+									</div>
 								</div>
 								<div class="fighter-info__row">
 									<div class="fighter-info__item info-item">
@@ -182,7 +183,7 @@
 											<div class="statistic-progress__title">Не состоялись</div>
 										</div>
 										<div class="statistic-progress__data">
-											<div class="statistic-progress__counter skyblue">1</div>
+											<div class="statistic-progress__counter gray-700">1</div>
 											<div class="statistic-progress__width-data">(<span>2%</span>)</div>
 
 										</div>
@@ -200,7 +201,7 @@
 					<div class="table-fights mt-5">
 						<div class="table-fights__title post-title">Список боев</div>
 
-						<div class="table mt-3">
+						<div class="table list-fights mt-3">
 							<div class="table__row table__row-header">
 								<div class="table__title">Итог</div>
 								<div class="table__title">Соперник</div>
@@ -212,7 +213,7 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji green">
-										<svg width="24" height="24" class="icon-victories" viewBox="0 0 24 24">
+										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
 											<use xlink:href="../../public/icons/icons.svg#icon-victories"/>
 										</svg>
 									</div>
@@ -237,11 +238,10 @@
 									<div class="table__text">1:43</div>
 								</div>
 							</div>
-
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji skyblue">
-										<svg width="24" height="24" class="icon-victories" viewBox="0 0 24 24">
+										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
 											<use xlink:href="../../public/icons/icons.svg#icon-draw"/>
 										</svg>
 									</div>
@@ -269,8 +269,8 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji red">
-										<svg width="24" height="24" class="icon-defeat" viewBox="0 0 24 24">
-											<use xlink:href="../../public/icons/icons.svg#icon-victories"/>
+										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
+											<use xlink:href="../../public/icons/icons.svg#icon-defeat"/>
 										</svg>
 									</div>
 								</div>
@@ -297,7 +297,7 @@
 							<div class="table__row">
 								<div class="table__col">
 									<div class="label-emoji gray-700">
-										<svg width="24" height="24" class="icon-victories" viewBox="0 0 24 24">
+										<svg width="24" height="24" class="icon" viewBox="0 0 24 24">
 											<use xlink:href="../../public/icons/icons.svg#icon-canceled"/>
 										</svg>
 									</div>
