--- a/src/pages/timetable.html
+++ b/src/pages/timetable.html
@@ -41,9 +41,175 @@
 						</div>
 					</nav>
 
-					<div class="timetable">
+					<div class="table timetable mt-3">
+						<div class="table__row table__row-header">
+							<div class="table__title">Дата</div>
+							<div class="table__title">Время</div>
+							<div class="table__title">Событие</div>
+							<div class="table__title">Место</div>
+						</div>
+						<div class="table__row">
+							<div class="table__col center">
+									<div class="table__text_big">10</div>
+									<div class="table__text_small">августа</div>
+							</div>
+							<div class="table__col">
+								<div class="table__text_big">10:30</div>
+								<div class="badge-status active mb-1">live</div>
+							</div>
+							<div class="table__col table__col_event-mobile">
+								<div class="table__text">GCFC MMA 10 Golden Coat Fighting Championship</div>
+							</div>
+							<div class="table__col d-flex flex-nowrap">
+								<svg width="20" height="20" class="icon mr-2" viewBox="0 0 20 20">
+									<use xlink:href="../../public/icons/flag.svg#flag-ua"/>
+								</svg>
+								<div class="table__text">City Holiday, Kyiv, Ukraine</div>
+							</div>
+						</div>
+						<div class="table__row">
+							<div class="table__col center">
+								<div class="table__text_big">11</div>
+								<div class="table__text_small">августа</div>
+							</div>
+							<div class="table__col">
+								<div class="table__text_big">14:50</div>
+							</div>
+							<div class="table__col table__col_event-mobile">
+								<div class="table__text">Rizin FF Rizin 23</div>
+							</div>
+							<div class="table__col d-flex flex-nowrap">
+								<svg width="20" height="20" class="icon mr-2" viewBox="0 0 20 20">
+									<use xlink:href="../../public/icons/flag.svg#flag-japan"/>
+								</svg>
+								<div class="table__text">Pia Arena MM, Yokohama, Japan</div>
+							</div>
+						</div>
+						<div class="table__row">
+							<div class="table__col center">
+								<div class="table__text_big">13</div>
+								<div class="table__text_small">августа</div>
+							</div>
+							<div class="table__col">
+								<div class="table__text_big">20:00</div>
+							</div>
+							<div class="table__col table__col_event-mobile">
+								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 8</div>
+							</div>
+							<div class="table__col d-flex flex-nowrap">
+								<svg width="20" height="20" class="icon mr-2" viewBox="0 0 20 20">
+									<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
+								</svg>
+								<div class="table__text">UFC APEX, Las Vegas, Nevada, United States</div>
+							</div>
+						</div>
+						<div class="table__row">
+							<div class="table__col center">
+								<div class="table__text_big">14</div>
+								<div class="table__text_small">августа</div>
+							</div>
+							<div class="table__col">
+								<div class="table__text_big">22:00</div>
+								<div class="badge-status active mb-1">live</div>
+							</div>
+							<div class="table__col table__col_event-mobile">
+								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 8</div>
+							</div>
+							<div class="table__col d-flex flex-nowrap">
+								<svg width="20" height="20" class="icon mr-2" viewBox="0 0 20 20">
+									<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
+								</svg>
+								<div class="table__text">UFC APEX, Las Vegas, Nevada, United States</div>
+							</div>
+						</div>
+						<div class="table__row">
+							<div class="table__col center">
+								<div class="table__text_big">15</div>
+								<div class="table__text_small">августа</div>
+							</div>
+							<div class="table__col">
+								<div class="table__text_big">21:30</div>
+								<div class="badge-status active mb-1">live</div>
+							</div>
+							<div class="table__col table__col_event-mobile">
+								<div class="table__text">CFFC 83 Cage Fury Fighting Championships 83</div>
+							</div>
+							<div class="table__col d-flex flex-nowrap">
+								<svg width="20" height="20" class="icon mr-2" viewBox="0 0 20 20">
+									<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
+								</svg>
+								<div class="table__text">2300 Arena Philadelphia, Pennsylvania, United States</div>
+							</div>
+						</div>
+						<div class="table__row">
+							<div class="table__col center">
+								<div class="table__text_big">15</div>
+								<div class="table__text_small">августа</div>
+							</div>
+							<div class="table__col">
+								<div class="table__text_big">21:30</div>
+								<div class="badge-status active mb-1">live</div>
+							</div>
+							<div class="table__col table__col_event-mobile">
+								<div class="table__text">CFFC 83 Cage Fury Fighting Championships 83</div>
+							</div>
+							<div class="table__col d-flex flex-nowrap">
+								<svg width="20" height="20" class="icon mr-2" viewBox="0 0 20 20">
+									<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
+								</svg>
+								<div class="table__text">2300 Arena Philadelphia, Pennsylvania, United States</div>
+							</div>
+						</div>
 
 					</div>
+					<nav aria-label="Page navigation example">
+						<div class="pagination-wrap mt-4">
+							<div class="page-item disabled">
+								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
+									<div aria-hidden="true">
+										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
+											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
+										</svg>
+									</div>
+								</a>
+							</div>
+							<div class="page-item disabled">
+								<a class="page-link page-link_prev page-link_arrow" href="#" aria-label="Previous">
+									<div aria-hidden="true">
+										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
+											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
+										</svg>
+									</div>
+								</a>
+							</div>
+							<ul class="pagination">
+								<li class="page-item active"><a class="page-link" href="#">1</a></li>
+								<li class="page-item"><a class="page-link" href="#">2</a></li>
+								<li class="page-item"><a class="page-link" href="#">3</a></li>
+								<li class="page-item"><a class="page-link" href="#">4</a></li>
+								<li class="page-item"><a class="page-link" href="#">5</a></li>
+								<li class="page-item"><a class="page-link" href="#">6</a></li>
+							</ul>
+							<div class="page-item">
+								<a class="page-link page-link_arrow" href="#" aria-label="Next">
+									<div aria-hidden="true">
+										<svg width="6" height="10" class="icon" viewBox="0 0 6 10">
+											<use xlink:href="../../public/icons/icons.svg#icon-arrowRight"/>
+										</svg>
+									</div>
+								</a>
+							</div>
+							<div class="page-item">
+								<a class="page-link page-link_arrow" href="#" aria-label="Next">
+									<div aria-hidden="true">
+										<svg width="13" height="12" class="icon" viewBox="0 0 13 12">
+											<use xlink:href="../../public/icons/icons.svg#icon-doubleRight"/>
+										</svg>
+									</div>
+								</a>
+							</div>
+						</div>
+					</nav>
 				</section>
 			</div>
 			<div class="col-lg-4 sidebar mt-4 mt-md-big-1 d-flex flex-column"></div>
