--- a/src/pages/timetable.html
+++ b/src/pages/timetable.html
@@ -60,7 +60,7 @@
 							<div class="table__col table__col_event-mobile">
 								<div class="table__text">GCFC MMA 10 Golden Coat Fighting Championship</div>
 							</div>
-							<div class="table__col grid-col">
+							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
 									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
 										<use xlink:href="../../public/icons/flag.svg#flag-ua"/>
@@ -80,7 +80,7 @@
 							<div class="table__col table__col_event-mobile">
 								<div class="table__text">Rizin FF Rizin 23</div>
 							</div>
-							<div class="table__col grid-col">
+							<div class="table__col  table__col_place grid-col">
 								<div class="table__icon-wrapper">
 									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
 										<use xlink:href="../../public/icons/flag.svg#flag-japan"/>
@@ -100,7 +100,7 @@
 							<div class="table__col table__col_event-mobile">
 								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 8</div>
 							</div>
-							<div class="table__col grid-col">
+							<div class="table__col  table__col_place grid-col">
 								<div class="table__icon-wrapper">
 									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
 										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
@@ -121,7 +121,7 @@
 							<div class="table__col table__col_event-mobile">
 								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 8</div>
 							</div>
-							<div class="table__col grid-col">
+							<div class="table__col  table__col_place grid-col">
 								<div class="table__icon-wrapper">
 									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
 										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
@@ -142,7 +142,7 @@
 							<div class="table__col table__col_event-mobile">
 								<div class="table__text">CFFC 83 Cage Fury Fighting Championships 83</div>
 							</div>
-							<div class="table__col grid-col">
+							<div class="table__col  table__col_place grid-col">
 								<div class="table__icon-wrapper">
 									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
 										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
@@ -163,7 +163,7 @@
 							<div class="table__col table__col_event-mobile">
 								<div class="table__text">CFFC 83 Cage Fury Fighting Championships 83</div>
 							</div>
-							<div class="table__col grid-col">
+							<div class="table__col  table__col_place grid-col">
 								<div class="table__icon-wrapper">
 									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
 										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
