fix post-preview in main page discussions

--- a/src/pages/timetable.html
+++ b/src/pages/timetable.html
@@ -57,7 +57,7 @@
 								<div class="table__text_big">10:30</div>
 								<div class="badge-status active mb-1">live</div>
 							</div>
-							<div class="table__col table__col_event-mobile">
+							<div class="table__col table__col_event-mobile" data-event="Событие">
 								<div class="table__text">GCFC MMA 10 Golden Coat Fighting Championship</div>
 							</div>
 							<div class="table__col table__col_place grid-col">
@@ -77,10 +77,10 @@
 							<div class="table__col">
 								<div class="table__text_big">14:50</div>
 							</div>
-							<div class="table__col table__col_event-mobile">
+							<div class="table__col table__col_event-mobile" data-event="Событие">
 								<div class="table__text">Rizin FF Rizin 23</div>
 							</div>
-							<div class="table__col  table__col_place grid-col">
+							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
 									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
 										<use xlink:href="../../public/icons/flag.svg#flag-japan"/>
@@ -97,10 +97,10 @@
 							<div class="table__col">
 								<div class="table__text_big">20:00</div>
 							</div>
-							<div class="table__col table__col_event-mobile">
-								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 8</div>
+							<div class="table__col table__col_event-mobile" data-event="Событие">
+								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 83</div>
 							</div>
-							<div class="table__col  table__col_place grid-col">
+							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
 									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
 										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
@@ -118,10 +118,10 @@
 								<div class="table__text_big">22:00</div>
 								<div class="badge-status active mb-1">live</div>
 							</div>
-							<div class="table__col table__col_event-mobile">
-								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 8</div>
+							<div class="table__col table__col_event-mobile" data-event="Событие">
+								<div class="table__text">Dana White's Contender Series Contender Series 2020: Week 2</div>
 							</div>
-							<div class="table__col  table__col_place grid-col">
+							<div class="table__col table__col_place grid-col">
 								<div class="table__icon-wrapper">
 									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
 										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
@@ -130,49 +130,6 @@
 								<div class="table__text">UFC APEX, Las Vegas, Nevada, United States</div>
 							</div>
 						</div>
-						<div class="table__row">
-							<div class="table__col center side-line">
-								<div class="table__text_big">15</div>
-								<div class="table__text_small">августа</div>
-							</div>
-							<div class="table__col">
-								<div class="table__text_big">21:30</div>
-								<div class="badge-status active mb-1">live</div>
-							</div>
-							<div class="table__col table__col_event-mobile">
-								<div class="table__text">CFFC 83 Cage Fury Fighting Championships 83</div>
-							</div>
-							<div class="table__col  table__col_place grid-col">
-								<div class="table__icon-wrapper">
-									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
-										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
-									</svg>
-								</div>
-								<div class="table__text">2300 Arena Philadelphia, Pennsylvania, United States</div>
-							</div>
-						</div>
-						<div class="table__row">
-							<div class="table__col center side-line">
-								<div class="table__text_big">15</div>
-								<div class="table__text_small">августа</div>
-							</div>
-							<div class="table__col">
-								<div class="table__text_big">21:30</div>
-								<div class="badge-status active mb-1">live</div>
-							</div>
-							<div class="table__col table__col_event-mobile">
-								<div class="table__text">CFFC 83 Cage Fury Fighting Championships 83</div>
-							</div>
-							<div class="table__col  table__col_place grid-col">
-								<div class="table__icon-wrapper">
-									<svg width="20" height="20" class="icon" viewBox="0 0 20 20">
-										<use xlink:href="../../public/icons/flag.svg#flag-usa"/>
-									</svg>
-								</div>
-								<div class="table__text">2300 Arena Philadelphia, Pennsylvania, United States</div>
-							</div>
-						</div>
-
 					</div>
 					<nav aria-label="Page navigation example">
 						<div class="pagination-wrap mt-4">
@@ -223,6 +180,7 @@
 						</div>
 					</nav>
 				</section>
+				<div class="ads mt-sm-4">Рекламный банер</div>
 			</div>
 			<div class="col-lg-4 sidebar mt-4 mt-md-big-1 d-flex flex-column"></div>
 		</div>
