--- a/src/pages/fighter.html
+++ b/src/pages/fighter.html
@@ -231,10 +231,10 @@
 								<div class="table__col  table__col_way-mobile" data-way="Способ">
 									<div class="table__text">DQ (Illegal Slams)</div>
 								</div>
-								<div class="table__col table__col_round label-col-sm label-col-sm_round blue-dark-100" data-round="Р">
+								<div class="table__col table__col_round  label-col-sm before-atr blue-dark-100" data-before="Р">
 									<div class="table__text">2</div>
 								</div>
-								<div class="table__col table__col_time label-col-sm label-col-sm_time blue-dark" data-time="В">
+								<div class="table__col table__col_time label-col-sm before-atr blue-dark" data-before="В">
 									<div class="table__text">1:43</div>
 								</div>
 							</div>
@@ -259,10 +259,10 @@
 								<div class="table__col  table__col_way-mobile" data-way="Способ">
 									<div class="table__text">DQ (Illegal Slams)</div>
 								</div>
-								<div class="table__col table__col_round label-col-sm label-col-sm_round blue-dark-100" data-round="Р">
+								<div class="table__col table__col_round  label-col-sm before-atr blue-dark-100" data-before="Р">
 									<div class="table__text">2</div>
 								</div>
-								<div class="table__col table__col_time label-col-sm label-col-sm_time blue-dark" data-time="В">
+								<div class="table__col table__col_time label-col-sm before-atr blue-dark" data-before="В">
 									<div class="table__text">1:43</div>
 								</div>
 							</div>
@@ -287,10 +287,10 @@
 								<div class="table__col  table__col_way-mobile" data-way="Способ">
 									<div class="table__text">DQ (Illegal Slams)</div>
 								</div>
-								<div class="table__col table__col_round label-col-sm label-col-sm_round blue-dark-100" data-round="Р">
+								<div class="table__col table__col_round  label-col-sm before-atr blue-dark-100" data-before="Р">
 									<div class="table__text">2</div>
 								</div>
-								<div class="table__col table__col_time label-col-sm label-col-sm_time blue-dark" data-time="В">
+								<div class="table__col table__col_time label-col-sm before-atr blue-dark" data-before="В">
 									<div class="table__text">1:43</div>
 								</div>
 							</div>
@@ -315,10 +315,10 @@
 								<div class="table__col  table__col_way-mobile" data-way="Способ">
 									<div class="table__text">DQ (Illegal Slams)</div>
 								</div>
-								<div class="table__col table__col_round label-col-sm label-col-sm_round blue-dark-100" data-round="Р">
+								<div class="table__col table__col_round  label-col-sm before-atr blue-dark-100" data-before="Р">
 									<div class="table__text">2</div>
 								</div>
-								<div class="table__col table__col_time label-col-sm label-col-sm_time blue-dark" data-time="В">
+								<div class="table__col table__col_time label-col-sm before-atr blue-dark" data-before="В">
 									<div class="table__text">1:43</div>
 								</div>
 							</div>
