--- a/src/pages/fighters.html
+++ b/src/pages/fighters.html
@@ -83,13 +83,13 @@
 							<div class="table__col table__col_name">
 								<div class="table__text text-sm-big">Александр Франка Ногуейра</div>
 							</div>
-							<div class="table__col before-text" data-text="Прозвище:">
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Прозвище:">
 								<div class="table__text">The Diet Butcher</div>
 							</div>
-							<div class="table__col before-text" data-text="Рекорд:">
-								<div class="table__text before-text">26-11-0</div>
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Рекорд:">
+								<div class="table__text">26-11-0</div>
 							</div>
-							<div class="table__col table__col_category before-text" data-text="Весовая категория:">
+							<div class="table__col table__col_category before-text pt-3 pt-sm-0" data-text="Весовая категория:">
 								<div class="table__text">light heavyweight / Light heavyweight</div>
 							</div>
 						</div>
@@ -109,13 +109,13 @@
 							<div class="table__col table__col_name">
 								<div class="table__text text-sm-big">Александр Франка Ногуейра</div>
 							</div>
-							<div class="table__col before-text" data-text="Прозвище:">
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Прозвище:">
 								<div class="table__text">The Diet Butcher</div>
 							</div>
-							<div class="table__col before-text" data-text="Рекорд:">
-								<div class="table__text before-text">26-11-0</div>
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Рекорд:">
+								<div class="table__text">26-11-0</div>
 							</div>
-							<div class="table__col table__col_category before-text" data-text="Весовая категория:">
+							<div class="table__col table__col_category before-text pt-3 pt-sm-0" data-text="Весовая категория:">
 								<div class="table__text">light heavyweight / Light heavyweight</div>
 							</div>
 						</div>
@@ -135,13 +135,13 @@
 							<div class="table__col table__col_name">
 								<div class="table__text text-sm-big">Александр Франка Ногуейра</div>
 							</div>
-							<div class="table__col before-text" data-text="Прозвище:">
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Прозвище:">
 								<div class="table__text">The Diet Butcher</div>
 							</div>
-							<div class="table__col before-text" data-text="Рекорд:">
-								<div class="table__text before-text">26-11-0</div>
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Рекорд:">
+								<div class="table__text">26-11-0</div>
 							</div>
-							<div class="table__col table__col_category before-text" data-text="Весовая категория:">
+							<div class="table__col table__col_category before-text pt-3 pt-sm-0" data-text="Весовая категория:">
 								<div class="table__text">light heavyweight / Light heavyweight</div>
 							</div>
 						</div>
@@ -161,13 +161,13 @@
 							<div class="table__col table__col_name">
 								<div class="table__text text-sm-big">Александр Франка Ногуейра</div>
 							</div>
-							<div class="table__col before-text" data-text="Прозвище:">
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Прозвище:">
 								<div class="table__text">The Diet Butcher</div>
 							</div>
-							<div class="table__col before-text" data-text="Рекорд:">
-								<div class="table__text before-text">26-11-0</div>
+							<div class="table__col before-text pt-3 pt-sm-0" data-text="Рекорд:">
+								<div class="table__text">26-11-0</div>
 							</div>
-							<div class="table__col table__col_category before-text" data-text="Весовая категория:">
+							<div class="table__col table__col_category before-text pt-3 pt-sm-0" data-text="Весовая категория:">
 								<div class="table__text">light heavyweight / Light heavyweight</div>
 							</div>
 						</div>
