--- a/src/pages/news.html
+++ b/src/pages/news.html
@@ -46,7 +46,7 @@
 								</div>
 							</div>
 
-							<div class="post-header__post-info post-info">
+							<div class="post-header__post-info post-info post-info_before-line">
 								<div class="post-info__author">KvladD</div>
 								<div class="post-info__date">
 									<svg width="12" height="14" class="icon-calendar" viewBox="0 0 12 14">
